non-msrv-tests/tests/ui/zeroize/comma.stderr
error: unsupported trait syntax, expected one of expected one of Clone, Copy, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd, Zeroize
 --> tests/ui/zeroize/comma.rs:2:16
  |
2 | #[derive_where(,)]
  |                ^

error: unsupported trait syntax, expected one of expected one of Clone, Copy, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd, Zeroize
 --> tests/ui/zeroize/comma.rs:6:16
  |
6 | #[derive_where(,Clone)]
  |                ^

error: unsupported trait syntax, expected one of expected one of Clone, Copy, Debug, Default, Eq, Hash, Ord, PartialEq, PartialOrd, Zeroize
  --> tests/ui/zeroize/comma.rs:10:22
   |
10 | #[derive_where(Clone,,)]
   |                      ^
